apps/dotnet-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-demo-api
  labels:
    app: platform-demo-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-demo-api
  template:
    metadata:
      labels:
        app: platform-demo-api
    spec:
      containers:
        - name: platform-demo-api
          image: ghcr.io/adamovick/platform-demo-api:f450f5f3aeb60b18172a060c165e1fade293ea31
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
