apps/dotnet-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-demo-api
  labels:
    app: platform-demo-api
spec:
  type: ClusterIP
  selector:
    app: platform-demo-api
  ports:
    - port: 80
      targetPort: 8080
