apps/dotnet-api/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-demo-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: platform-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-demo-api
                port:
                  number: 80
